Ensure no cases that nav link text could trig alignment problem

--- a/packages/office-ui-fabric-react/src/components/Nav/examples/Nav.Basic.Example.scss
+++ b/packages/office-ui-fabric-react/src/components/Nav/examples/Nav.Basic.Example.scss
@@ -3,7 +3,7 @@
 :global {
 
   .ms-NavExample-LeftPane {
-    width: 208px;
+    width: 207px;
     height: 500px;
     box-sizing: border-box;
     border: 1px solid #EEE;
